--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,17 @@
+body {
+	font-family: 'Helvetica'
+}
+
 .container {
 	margin-top: 15px;
+}
+
+.explanation {
+	margin-left: 4vw;
+}
+
+header h1 {
+	font-weight: 500;
 }
 
 nav li{
@@ -11,7 +23,9 @@ nav li{
 
 nav a {
 	text-decoration: none;
-	color: grey;
+	/*color: #7A7A7A;*/
+	color: #737373;
+	font-weight: lighter;
 }
 
 nav {
@@ -22,4 +36,28 @@ nav {
 a:hover {
 	text-decoration: none;
 	//background-color: blue;
+}
+
+.projects {
+	margin-top: 4vw;
+}
+
+.projects .row {
+	margin-bottom: 4vw;
+}
+
+.project .capture {
+	background-color: #5745FF;
+	border-radius: 6px;
+	width: 100%;
+	height: 100%;
+	max-height: 15vw;
+}
+
+.project .summary {
+	margin-top: 1vw;
+}
+
+.project .summary a {
+	/*margin-right: 3vw;*/
 }
