--- a/style/main.css
+++ b/style/main.css
@@ -88,6 +88,10 @@ a:hover {
 	border-bottom: 1px lightgrey solid;
 }
 
+.descriptions {
+	list-style-type: none;
+}
+
 #me_photo {
 	margin-bottom: 2vw;
 }
